fonts, some icons, grid

--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 
 </head>
 <body>
-    
+<section class="grid-game-catergories">
+<article class="grid1">
+<div class="icon-border">
+<img src="images/cow.svg" class="question-icon" alt="">
+<p>0/5</p>    
+</div>
+</article>
+<article class="grid2">
+<div class="icon-border">
+<img src="images/milk-glass.svg" class="question-icon" alt="">
+<p>0/5</p>    
+</div>
+</article>
+<article class="grid3">
+<div class="icon-border">
+<img src="images/windmill-icon.svg" class="question-icon" alt="">
+<p>0/5</p>    
+</div>
+</article>
+<article class="grid1">
+<div class="icon-border">
+<img src="images/cow.svg" class="question-icon" alt="">
+<p>0/5</p>    
+</div>
+</article>
+</section>
 </body>
 </html>
