--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Sander og Oskar">
     <title>Arla</title>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"/>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body>
-<section class="grid-game-catergories">
+
+<body onhashchange="pageChange()">
+    <!-- <section class="grid-game-catergories">
 <article class="grid1">
 <div class="icon-border">
 <img src="images/cow.svg" class="question-icon" alt="">
@@ -28,12 +31,140 @@
 <p>0/5</p>    
 </div>
 </article>
-<article class="grid1">
+<article class="grid4">
 <div class="icon-border">
-<img src="images/cow.svg" class="question-icon" alt="">
+<img src="images/leaf-icon.svg" class="question-icon" alt="">
 <p>0/5</p>    
 </div>
 </article>
-</section>
+<article class="grid5">
+    <div class="icon-border">
+    <img src="images/welfare-icon.svg" class="question-icon" alt="">
+    <p>0/5</p>    
+    </div>
+    </article>
+<article class="grid3">
+        <div class="icon-border">
+        <img src="images/drop-icon.svg" class="question-icon" alt="">
+        <p>0/5</p>    
+        </div>
+        </article>
+</section> -->
+<!-- login page -->
+<section id="login" class="page">
+    <!-- firebase auth container  -->
+    <section id="firebaseui-auth-container"></section>
+  </section>
+
+    <nav id="tabbar" class="tabbar hide">
+        <a href="#profile" >Profile</a>
+        <a href="#catergories">Catergories</a>
+        <a href="#catergoriesQ">Forum</a>
+    </nav>
+    <section id="catergoriesQ" class="page">
+        <section class="grid-test-wrapper">
+
+        </section>
+    </section>
+    <section id="catergories" class="page">
+        <section class="grid-icon-wrapper">
+            <article>
+                <a href="#animals">
+                    <div class="icon-border">
+                        <img src="images/cow.svg" class="question-icon" alt="">
+                        <p>0/5</p>
+                    </div>
+                </a>
+            </article>
+            <article>
+                <div class="icon-border">
+                    <img src="images/milk-glass.svg" class="question-icon" alt="">
+                    <p>0/5</p>
+                </div>
+            </article>
+            <article class="grid-solo">
+                <div class="icon-border">
+                    <img src="images/windmill-icon.svg" class="question-icon" alt="">
+                    <p>0/5</p>
+                </div>
+            </article>
+
+            <article>
+                <div class="icon-border">
+                    <img src="images/leaf-icon.svg" class="question-icon" alt="">
+                    <p>0/5</p>
+                </div>
+            </article>
+            <article>
+                <div class="icon-border">
+                    <img src="images/welfare-icon.svg" class="question-icon" alt="">
+                    <p>0/5</p>
+                </div>
+            </article>
+            <article class="grid-solo">
+                <div class="icon-border">
+                    <img src="images/drop-icon.svg" class="question-icon" alt="">
+                    <p>0/5</p>
+                </div>
+            </article>
+
+        </section>
+    </section>
+
+    <section id="Animals" class="page">
+        <div class="grid-icon-wrapper">
+            <a href="#catergories">
+                <article class="grid-solo">
+                    <div class="icon-border">
+                        <img src="images/cow.svg" class="question-icon" alt="">
+                        <p><span id="question-number">0</span>/5</p>
+                    </div>
+                </article>
+            </a>
+            </article>
+        </div>
+        <article class="question-header">
+        <h1>Animals</h1>
+        <div class="breakline"></div>
+        </article>
+    <section class="question-container">
+        <article class="question">
+        <div class="number-text"><p><span>1.</span></p><p>How many cows do you have?</p></div>
+        <div class="question-input">
+        <input name="q1" type="number" required onchange=inputValue(this.value)><p>cows</p>
+        </div>
+        </article>
+        <article class="question">
+        <div class="number-text"><p><span>2.</span></p><p>How many kilos of milk do you produce in a year per cow?</p></div>
+        <div class="question-input">
+        <input name="q2" type="number" required onchange=inputValue(this.value)><p>kg</p>
+        </div>
+        </article>
+        
+    </section> -->
+    </section>
+
+    <section id="profile" class="page">
+          <a href="#login" onclick="logout()">Logout</a>
+        <form>
+          <label for="name">Name</label>
+          <input type="text" id="name" placeholder="Type your name" required>
+          <label for="mail">Mail</label>
+          <input type="email" id="mail" placeholder="Type your mail" disabled>
+          <button type="button" name="button" onclick="updateUser()">Save</button>
+          <button type="button" name="button" onclick="addToDB()">DB</button>
+          <button type="button" name="button" onclick="addTest()">Add</button>
+        </form>
+      </section>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-firestore.js"></script>
+<script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <script src="js\firebase-config.js"></script>
+    <script src="js\main.js" type="module"></script>
+    <script src="js/login.js" type="module"></script>
+    <script src="js\question-counter.js"></script>
 </body>
+
 </html>
