--- a/info.html
+++ b/info.html
@@ -16,7 +16,7 @@
                 <h4>Medlemsfordele</h4>
                 <ul class="infolist">
                     <li> Adgang til Arla Gårdens
-                        eget lukket landmandsforum.
+                        eget interne landmandsforum.
                         </li>
                     <li>Benyttelse af Arlas eksperter
                         bl.a. salgskonsulent eller
@@ -25,6 +25,9 @@
                     <li>Oversigt over dit eget klima-
                         fodtryk og din udvikling over
                         tid.
+                        </li>
+                        <li>
+                            Med til at gøre en forskel for Arla og for vores fremtid.
                         </li>
                 </ul>
             </div>
