--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         </article>
         
-    </section> -->
+    </section>
     </section>
 
     <section id="profile" class="page">
