fixed golden border on complete

--- a/app.html
+++ b/app.html
@@ -29,8 +29,22 @@
         <img src="images/Arla_Logo_RGB_Small.png" alt="arla logo" class="arlalogoinfo">
         <h3 class="underoverskrift">Gården Plus</h3>
          </div>
+         <div class="cream-grid">
+             <div><p class="cream-text">Velkommen til Arla gården plus.<br><br>
+
+                Tak fordi du hjælper til at vi sammen kan
+                skabe en bedre og mere bæredygtig 
+                fremtid for vores børn og vores planet.<br><br>
+                
+                Vi er stolte over Arla og alle dets 
+                landmænd og sammen kan vi producere 
+                mælkeprodukter af den højeste kvalitet.<br><br>
+                
+                Vi er Arla.<br>
+                Vi skaber vores egen fremtid. </p></div>
         <div class="grid-test-wrapper">
         </div>
+    </div>
     </section>
     <section id="Animals" class="page" onclick="init()">
         <div class="grid-icon-wrapper">
@@ -48,6 +62,7 @@
             <h1>Animals</h1>
             <div class="breakline"></div>
         </article>
+        <div class="media-question-container">
         <section class="question-container">
             <article class="question">
                 <div class="number-text">
@@ -80,6 +95,7 @@
                 </div>
             </article>
         </section>
+    </div>
     </section>
     <section id="profile" class="page">
         <a href="#login" onclick="logout()">Logout</a>
