--- a/app.html
+++ b/app.html
@@ -127,7 +127,7 @@
         <h3 class="underoverskrift">Gården Plus</h3>
         <h4>Opslagstavle</h4>
 
-          <div class="forumouter">
+          <div class="forumouter" >
               <div class="profilbillede">
             <img src="images/profil.svg" alt="profilbillede">
             <h5><b>Anonym</b></h5>
@@ -154,7 +154,7 @@
 
 
 
-              <div class="forumouter">
+              <div class="forumouter" id="curser" onclick="document.location='#forumtopic';return false;">
                 <div class="profilbillede">
               <img src="images/profil.svg" alt="profilbillede">
               <h5><b>Anonym3</b></h5>
@@ -208,8 +208,8 @@
     </section>
 
     <section id="forumtopic" class="page">
-        <div id="forumtopicdiv">
-        <img src="images/Arla_Logo_RGB_Small.png" alt="arla logo" class="arlalogoinfo">
+        <div id="forumtopicdiv" onclick="document.location='#forum';return false;">
+        <img src="images/Arla_Logo_RGB_Small.png" alt="arla logo" class="arlalogoinfo" style="cursor: pointer;">
         <h3 class="underoverskrift">Gården Plus</h3>
 
 
