--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="question-input">
                     <input id="q1" type="number" required onchange=inputValue(this.value)>
-                    <p>cows</p>
+                    <p>køer</p>
                 </div>
             </article>
             <article class="question">
