added ??DELETED?? STUFF

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 
 
-              <div class="forumouter">
+              <div class="forumouter" onclick="document.location='#forumtopic';return false;" style="cursor: pointer;">
                 <div class="profilbillede">
               <img src="images/profil.svg" alt="profilbillede">
               <h5><b>Anonym3</b></h5>
@@ -236,7 +236,7 @@
     </section>
 
     <section id="forumtopic" class="page">
-        <div id="forumtopicdiv">
+        <div id="forumtopicdiv" >
         <img src="images/Arla_Logo_RGB_Small.png" alt="arla logo" class="arlalogoinfo">
         <h3 class="underoverskrift">Gården Plus</h3>
 
@@ -388,10 +388,7 @@
                 </div>
             </section>
 
-                  <!-- loader  -->
-                <div id="loader">
-                 <div class="spinner"></div>
-                </div>
+             
 
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
